--- a/src/main/resources/templates/findpassword.html
+++ b/src/main/resources/templates/findpassword.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/community.css}">
     <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
     <script th:src="@{/layui/layui.js}" type="application/javascript"></script>
+    <script src="https://ssl.captcha.qq.com/TCaptcha.js"></script>
     <script type="application/javascript">
         window.onload=function () {
             $(".autocomplete ul li").each(function () {
@@ -85,6 +86,19 @@
         layui.use('element',function () {
             var element = layui.element;
         });
+
+        function checkAccount() {
+            var check = false;
+            var account = $("#account").val();
+            if(!account){
+                $("#account").next().html("请输入手机号/邮箱");
+                check = false;
+            }else{
+                $("#account").next().html("");
+                check = true;
+            }
+            return check;
+        }
 
         function checkPhone() {
             var check = false;
@@ -229,37 +243,56 @@
             }
         }
 
-        function checkAccount() {
+        function checkAccount2() {
             var account = $("#account").val();
-            if(!account){
+            if(!checkAccount()){
                 $("#account").next().html("请输入手机号/邮箱");
             }else{
-                $.ajax({
-                    type:"post",
-                    url:"/checkAccount",
-                    contentType:"application/json",
-                    data:JSON.stringify({
-                        "account":account,
-                    }),
-                    success:function (result) {
-                        if(result.code == 200){
-                            $(".findpwd-b").removeClass("layui-hide");
-                            $(".findpwd-a").addClass("layui-hide");
-                            if(account.length == 11){
-                                $(".findpwd-b h3").html("手机号："+account);
-                                $(".el-code-button").attr("onclick","getCode(3)");
-                                $(".modifyAccount").val(account);
-                            }else{
-                                $(".findpwd-b h3").html("邮箱："+account);
-                                $(".el-code-button").attr("onclick","getEmailCode(1)");
-                                $(".modifyAccount").val(account);
-                            }
-                        }else{
-                            $("#account").next().html(result.message);
-                        }
-                    },
-                    dataType:"json"
+                var captcha1 = new TencentCaptcha('2077491291', function(res) {
+                    if(res.ret == 0){
+                        $.ajax({
+                            type:"post",
+                            url:"/checkCaptcha",
+                            contentType:"application/json",
+                            data:JSON.stringify({
+                                "ticket":res.ticket,
+                                "randstr":res.randstr
+                            }),
+                            success:function (result) {
+                                if(result.code == 200) {
+                                    $.ajax({
+                                        type:"post",
+                                        url:"/checkAccount",
+                                        contentType:"application/json",
+                                        data:JSON.stringify({
+                                            "account":account
+                                        }),
+                                        success:function (result) {
+                                            if(result.code == 200){
+                                                $(".findpwd-b").removeClass("layui-hide");
+                                                $(".findpwd-a").addClass("layui-hide");
+                                                if(account.length == 11){
+                                                    $(".findpwd-b h3").html("手机号："+account);
+                                                    $(".el-code-button").attr("onclick","getCode(3)");
+                                                    $(".modifyAccount").val(account);
+                                                }else{
+                                                    $(".findpwd-b h3").html("邮箱："+account);
+                                                    $(".el-code-button").attr("onclick","getEmailCode(1)");
+                                                    $(".modifyAccount").val(account);
+                                                }
+                                            }else{
+                                                $("#account").next().html(result.message);
+                                            }
+                                        },
+                                        dataType:"json"
+                                    });
+                                }
+                            },
+                            dataType:"json"
+                        });
+                    }
                 });
+                captcha1.show(); // 显示验证码
             }
         }
 
@@ -302,7 +335,7 @@
             <div class="register-container" style="padding-top: 60px;padding-bottom: 150px;">
                 <div class="findpwd-a">
                     <div class="form-group" style="position: relative;">
-                        <input type="text" class="el-input" id="account" name="account" placeholder="请输入绑定的手机号/邮箱" autocomplete="off">
+                        <input type="text" class="el-input" id="account" name="account" placeholder="请输入绑定的手机号/邮箱" autocomplete="off" onkeyup="checkAccount()">
                         <p class="error-message"></p>
                         <div class="autocomplete layui-hide" style="top: 48px;">
                             <ul>
@@ -319,7 +352,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button type="button" class="el-button--primary" onclick="checkAccount()"><span>确认</span></button>
+                        <button type="button" class="el-button--primary" onclick="checkAccount2()"><span>确认</span></button>
                     </div>
                 </div>
                 <div class="findpwd-b layui-hide">
