--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/community.css}">
     <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
     <script th:src="@{/layui/layui.js}" type="application/javascript"></script>
+    <script src="https://ssl.captcha.qq.com/TCaptcha.js"></script>
     <script type="application/javascript">
         window.onload=function () {
             var url=window.location.href;                    //获取当前页面的url
@@ -175,20 +176,39 @@
             }else if(regExp.test(phone) == false){
                 $("#phone").next().html("请输入正确的手机号");
             }else{
-                $.ajax({
-                    type:"post",
-                    url:"/getCode/"+value,
-                    contentType:"application/json",
-                    data: phone,
-                    success:function (result) {
-                        if(result.code == 200){
-                            settime(obj,span);
-                        }else{
-                            $("#phone").next().html(result.message);
-                        }
-                    },
-                    dataType:"json"
+                var captcha1 = new TencentCaptcha('2077491291', function(res) {
+                    if(res.ret == 0){
+                        $.ajax({
+                            type:"post",
+                            url:"/checkCaptcha",
+                            contentType:"application/json",
+                            data:JSON.stringify({
+                                "ticket":res.ticket,
+                                "randstr":res.randstr
+                            }),
+                            success:function (result) {
+                                if(result.code == 200) {
+                                    $.ajax({
+                                        type:"post",
+                                        url:"/getCode/"+value,
+                                        contentType:"application/json",
+                                        data: phone,
+                                        success:function (result) {
+                                            if(result.code == 200){
+                                                settime(obj,span);
+                                            }else{
+                                                $("#phone").next().html(result.message);
+                                            }
+                                        },
+                                        dataType:"json"
+                                    });
+                                }
+                            },
+                            dataType:"json"
+                        });
+                    }
                 });
+                captcha1.show(); // 显示验证码
             }
 
         }
@@ -222,6 +242,7 @@
 
         function check() {
             var check = false;
+            var choice = 1;
             var phone;
             var account;
             var type = $("#loginType").val();
@@ -231,46 +252,75 @@
             }else if(checkPhone() && checkCode() && type == 2){
                 phone = $("#phone").val();
                 check = true;
+                choice = 2;
             }
             var password = $("#password").val();
             var code = $("#code").val();
             var oauthsId = $("#oauthsId").val();
             var oauthsType = $("#oauthsType").val();
             if(check == true){
-                $.ajax({
-                    type:"post",
-                    url:"/loginUser/"+type,
-                    contentType:"application/json",
-                    data:JSON.stringify({
-                        "account":account,
-                        "password":password,
-                        "phone":phone,
-                        "code":code,
-                        "flag":flag,
-                        "oauthsId":oauthsId,
-                        "oauthsType":oauthsType
-                    }),
-                    success:function (result) {
-                        if(result.code == 200){
-                            window.location.href="/success?info=登录成功";
-                        }else{
-                            if(result.code == 2015){
-                                $("#password").next().html(result.message);
-                            }else if(result.code == 2018){
-                                $("#password").next().html(result.message);
-                            }else if(result.code == 2019){
-                                $("#password").next().html(result.message);
-                            }else if(result.code == 2020){
-                                $("#code").parent().next().html(result.message);
-                            }else if(result.code == 2021){
-                                $("#code").parent().next().html(result.message);
+                if(choice == 1){
+                    var captcha1 = new TencentCaptcha('2077491291', function(res) {
+                        if(res.ret == 0){
+                            $.ajax({
+                                type:"post",
+                                url:"/checkCaptcha",
+                                contentType:"application/json",
+                                data:JSON.stringify({
+                                    "ticket":res.ticket,
+                                    "randstr":res.randstr
+                                }),
+                                success:function (result) {
+                                    if(result.code == 200){
+                                        $.ajax({
+                                            type:"post",
+                                            url:"/loginUser/"+type,
+                                            contentType:"application/json",
+                                            data:JSON.stringify({
+                                                "account":account,
+                                                "password":password,
+                                                "flag":flag,
+                                                "oauthsId":oauthsId,
+                                                "oauthsType":oauthsType
+                                            }),
+                                            success:function (result) {
+                                                if(result.code == 200){
+                                                    window.location.href="/success?info=登录成功";
+                                                }else{
+                                                    $("#password").next().html(result.message);
+                                                }
+                                            },
+                                            dataType:"json"
+                                        });
+                                    }
+                                },
+                                dataType:"json"
+                            });
+                        }
+                    });
+                    captcha1.show(); // 显示验证码
+                }else{
+                    $.ajax({
+                        type:"post",
+                        url:"/loginUser/"+type,
+                        contentType:"application/json",
+                        data:JSON.stringify({
+                            "phone":phone,
+                            "code":code,
+                            "flag":flag,
+                            "oauthsId":oauthsId,
+                            "oauthsType":oauthsType
+                        }),
+                        success:function (result) {
+                            if(result.code == 200){
+                                window.location.href="/success?info=登录成功";
                             }else{
                                 $("#code").parent().next().html(result.message);
                             }
-                        }
-                    },
-                    dataType:"json"
-                });
+                        },
+                        dataType:"json"
+                    });
+                }
             }
         }
 
