--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/community.css}">
     <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
     <script th:src="@{/layui/layui.js}" type="application/javascript"></script>
+    <script src="https://ssl.captcha.qq.com/TCaptcha.js"></script>
     <script type="application/javascript">
         layui.use('element',function () {
             var element = layui.element;
@@ -124,20 +125,39 @@
             }else if(regExp.test(phone) == false){
                 $("#phone").next().html("请输入正确的手机号");
             }else{
-                $.ajax({
-                    type:"post",
-                    url:"/getCode/"+value,
-                    contentType:"application/json",
-                    data: phone,
-                    success:function (result) {
-                        if(result.code == 200){
-                            settime(obj,span);
-                        }else{
-                            $("#phone").next().html(result.message);
-                        }
-                    },
-                    dataType:"json"
+                var captcha1 = new TencentCaptcha('2077491291', function(res) {
+                    if(res.ret == 0){
+                        $.ajax({
+                            type:"post",
+                            url:"/checkCaptcha",
+                            contentType:"application/json",
+                            data:JSON.stringify({
+                                "ticket":res.ticket,
+                                "randstr":res.randstr
+                            }),
+                            success:function (result) {
+                                if(result.code == 200) {
+                                    $.ajax({
+                                        type:"post",
+                                        url:"/getCode/"+value,
+                                        contentType:"application/json",
+                                        data: phone,
+                                        success:function (result) {
+                                            if(result.code == 200){
+                                                settime(obj,span);
+                                            }else{
+                                                $("#phone").next().html(result.message);
+                                            }
+                                        },
+                                        dataType:"json"
+                                    });
+                                }
+                            },
+                            dataType:"json"
+                        });
+                    }
                 });
+                captcha1.show(); // 显示验证码
             }
 
         }
